--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.desmoj-2.3.4-complete-bin.jar}
+    ${file.reference.desmoj-2.3.4-complete-bin.jar}:\
+    ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
