Wczytywanie parametrów do obiektu RailwayStation zarówno ze standardowego wejścia, jak i z pliku.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.desmoj-2.3.4-complete-bin.jar=lib/desmoj-2.3.4-complete-bin.jar
+file.reference.java-json.jar=lib/java-json.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.desmoj-2.3.4-complete-bin.jar}:\
+    ${file.reference.java-json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
