Sprowadzenie zakresu parametru internal_arrival_time do pojedynczej wartości, jednakowej dla wszystkich pociągów.

--- a/config.json
+++ b/config.json
@@ -5,8 +5,7 @@
     "max_coming_time_span_with_ticket": 30,
     "min_coming_time_span_without_ticket": 25,
     "max_coming_time_span_without_ticket": 50,
-    "min_internal_arrival_time": 5,
-    "max_internal_arrival_time": 10,
+    "internal_arrival_time": 5,
     "min_arriving_passenger_count": 10,
     "max_arriving_passenger_count": 200,
     "min_departuring_passenger_count": 10,
