Sparametryzowanie opóźnienia zewnętrznego i wydzielenie klasy zawierającej konfigurację dla symulacji.

--- a/config.json
+++ b/config.json
@@ -7,6 +7,8 @@
     "max_coming_time_span_without_ticket": 50,
     "internal_arrival_time": 5,
     "default_platform_waiting_time": 10,
+    "min_external_delay": 0,
+    "max_external_delay": 60,
     "min_arriving_passenger_count": 10,
     "max_arriving_passenger_count": 200,
     "min_departuring_passenger_count": 10,
