--- a/config.json
+++ b/config.json
@@ -19,6 +19,7 @@
     "average_probability_of_having_companion": 20,
     "average_probability_of_complaining": 25,
     "average_probability_of_having_ticket": 33,
+    "average_probability_of_external_delay": 50,
     "min_serving_information_time": 5,
     "max_serving_information_time": 20,
     "min_selling_ticket_time": 2,
