--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -76,6 +76,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+run.jvmargs=-Xmx1024M
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
