--- a/config.json
+++ b/config.json
@@ -1,35 +1,38 @@
 {
-    "go_to_waiting_room_min_time_span": 20,
-    "go_to_platform_max_time_span": 10,
-    "min_coming_time_span_with_ticket": 10,
-    "max_coming_time_span_with_ticket": 30,
-    "min_coming_time_span_without_ticket": 25,
-    "max_coming_time_span_without_ticket": 50,
-    "min_companion_coming_time_span": 10,
-    "max_companion_coming_time_span": 20,
-    "internal_arrival_time": 5,
-    "default_platform_waiting_time": 10,
-    "min_external_delay": 0,
-    "max_external_delay": 60,
-    "min_arriving_passenger_count": 10,
-    "max_arriving_passenger_count": 200,
-    "min_departuring_passenger_count": 10,
-    "max_departuring_passenger_count": 200,
-    "max_companion_count": 4,
-    "average_probability_of_having_companion": 20,
-    "average_probability_of_complaining": 25,
-    "average_probability_of_having_ticket": 33,
-    "average_probability_of_external_delay": 50,
-    "min_serving_information_time": 5,
-    "max_serving_information_time": 20,
-    "min_selling_ticket_time": 2,
-    "max_selling_ticket_time": 6,
-    "average_share_of_visitors": 25,
-    "external_delay_info_time_span": 30,
-    "platform_count": 15,
-    "info_desk_count": 12,
-    "cash_desk_count": 11,
-    "scheduling_algorithm": 3,
-    "waiting_room_capacity": 8000,
-    "crowd_speed_function": null
+    "simulation":
+    {
+        "go_to_waiting_room_min_time_span": 20,
+        "go_to_platform_max_time_span": 10,
+        "min_coming_time_span_with_ticket": 10,
+        "max_coming_time_span_with_ticket": 30,
+        "min_coming_time_span_without_ticket": 25,
+        "max_coming_time_span_without_ticket": 50,
+        "min_companion_coming_time_span": 10,
+        "max_companion_coming_time_span": 20,
+        "internal_arrival_time": 5,
+        "default_platform_waiting_time": 10,
+        "min_external_delay": 0,
+        "max_external_delay": 60,
+        "min_arriving_passenger_count": 10,
+        "max_arriving_passenger_count": 50,
+        "min_departuring_passenger_count": 10,
+        "max_departuring_passenger_count": 50,
+        "max_companion_count": 4,
+        "average_probability_of_having_companion": 20,
+        "average_probability_of_complaining": 25,
+        "average_probability_of_having_ticket": 33,
+        "average_probability_of_external_delay": 50,
+        "min_serving_information_time": 5,
+        "max_serving_information_time": 20,
+        "min_selling_ticket_time": 2,
+        "max_selling_ticket_time": 6,
+        "average_share_of_visitors": 25,
+        "external_delay_info_time_span": 30,
+        "platform_count": 15,
+        "info_desk_count": 12,
+        "cash_desk_count": 11,
+        "scheduling_algorithm": 3,
+        "waiting_room_capacity": 8000,
+        "crowd_speed_function": null
+    }
 }
