Aktualizacja parametrów symulacji, obsługa zadanych rozkładów.

--- a/config.json
+++ b/config.json
@@ -17,22 +17,25 @@
         "max_arriving_passenger_count": 150,
         "min_departuring_passenger_count": 10,
         "max_departuring_passenger_count": 150,
-        "max_companion_count": 4,
-        "average_probability_of_having_companion": 20,
+        "companion_count_distribution": [30, 30, 20, 10, 5, 5, 0],
+        "crowd_speed_distribution": [0, 8, 7, 6, 4, 2, 1, 0],
+        "visitor_coming_distribution": [20, 30, 40, 50, 60, 70, 80, 90, 100, 90, 80, 70],
         "average_probability_of_complaining": 25,
-        "average_probability_of_having_ticket": 33,
+        "average_probability_of_getting_information": 30,
+        "average_probability_of_buying_ticket": 50,
         "average_probability_of_external_delay": 50,
         "min_serving_information_time": 5,
         "max_serving_information_time": 10,
         "min_selling_ticket_time": 2,
         "max_selling_ticket_time": 6,
-        "average_share_of_visitors": 25,
         "external_delay_info_time_span": 30,
         "platform_count": 4,
         "info_desk_count": 2,
         "cash_desk_count": 3,
-        "scheduling_algorithm": 3,
-        "waiting_room_capacity": 8000,
-        "crowd_speed_function": null
+        "scheduling_algorithm": "wait",
+        "waiting_room_capacity": 200,
+        "hall_length": 40,
+        "subway_length": 40,
+        "subway_width": 40
     }
 }
