--- a/config.json
+++ b/config.json
@@ -18,7 +18,6 @@
         "min_departuring_passenger_count": 10,
         "max_departuring_passenger_count": 70,
         "companion_count_distribution": [30, 30, 20, 10, 5, 5, 0],
-        "crowd_speed_distribution": [0, 8, 7, 6, 4, 2, 1, 0],
         "visitor_coming_distribution": [20, 30, 40, 50, 60, 70, 80, 90, 100, 90, 80, 70],
         "average_probability_of_complaining": 25,
         "average_probability_of_getting_information": 30,
@@ -33,9 +32,6 @@
         "info_desk_count": 7,
         "cash_desk_count": 7,
         "scheduling_algorithm": "wait",
-        "waiting_room_capacity": 200,
-        "hall_length": 40.0,
-        "subway_length": 40.0,
-        "subway_width": 40.0
+        "waiting_room_capacity": 200
     }
 }
